# launcher

./: BetterNetwork.hs  CMakeLists.txt  LauncherConfig.hs.in  README.md  Setup.hs  launcher.cabal.in  launcher.hs
win32/: icon.rc
